started refactor day17